--- a/Animations/Base.lproj/Main.storyboard
+++ b/Animations/Base.lproj/Main.storyboard
@@ -17,26 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="z9E-mt-gfV">
-                                <rect key="frame" x="20" y="841" width="388" height="31"/>
+                                <rect key="frame" x="20" y="842" width="388" height="30"/>
                                 <subviews>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Wrg-lS-4xK">
-                                        <rect key="frame" x="-2" y="0.0" width="352" height="32"/>
+                                        <rect key="frame" x="-2" y="0.0" width="392" height="31"/>
                                         <connections>
                                             <action selector="onManualSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="AqX-aj-zmu"/>
                                         </connections>
                                     </slider>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Manually Animate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJj-R4-SIY">
-                                        <rect key="frame" x="368" y="0.0" width="0.0" height="31"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ieT-hS-4dH">
-                                        <rect key="frame" x="388" y="0.0" width="2" height="31"/>
-                                        <connections>
-                                            <action selector="onManualAnimate:" destination="BYZ-38-t0r" eventType="valueChanged" id="Eee-oM-Emt"/>
-                                        </connections>
-                                    </switch>
                                 </subviews>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tyre" translatesAutoresizingMaskIntoConstraints="NO" id="hjt-Lb-Ss4">
@@ -61,23 +49,29 @@
                     </view>
                     <navigationItem key="navigationItem" id="Ltm-Rb-NxM"/>
                     <connections>
-                        <outlet property="autoAnimateSwitch" destination="ieT-hS-4dH" id="0wo-F5-Kig"/>
                         <outlet property="image" destination="hjt-Lb-Ss4" id="JIE-ZN-vqA"/>
                         <outlet property="manualAnimateSlider" destination="Wrg-lS-4xK" id="QLp-HE-N3S"/>
+                        <segue destination="xRm-Jj-MYr" kind="presentation" identifier="navigate" id="xK6-fb-B58"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="919.62616822429902" y="85.529157667386613"/>
         </scene>
-        <!--View Controller-->
+        <!--Details View Controller-->
         <scene sceneID="cRl-g5-WZh">
             <objects>
-                <viewController id="xRm-Jj-MYr" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="xRm-Jj-MYr" customClass="DetailsViewController" customModule="Animations" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZPv-0D-6tb">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2Y-Az-wwT">
+                                <rect key="frame" x="180" y="420" width="67" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Button"/>
+                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tyre" translatesAutoresizingMaskIntoConstraints="NO" id="69Q-lP-HDK">
                                 <rect key="frame" x="20" y="44" width="388" height="337"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -86,10 +80,12 @@
                         <viewLayoutGuide key="safeArea" id="7QX-Nt-hnW"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fP3-VS-p84" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1621.9626168224297" y="85.529157667386613"/>
+            <point key="canvasLocation" x="1808" y="78"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8rH-8N-sXH">
